--- a/Step05Final/src/main/webapp/vue2/step03_class2.html
+++ b/Step05Final/src/main/webapp/vue2/step03_class2.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Step03_class.html</title>
+    <title>Step03_class2.html</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <h1>vue js로 클래스 속성의 값 제어하기</h1>
+    <h1>vue js로 클래스 속성의 값 제어하기2</h1>
     <div id="app">
     	<button class="btn btn-primary btn-lg">버튼</button>
-    	<button class="btn" v-bind:class="{'btn-primary':isPrimary, 'btn-lg':isLg}">Vue 버튼</button>
+    	<button class="btn" v-bind:class="obj">Vue 버튼</button>
     	<br />
     	<label>
     		파란색 버튼 <input type="checkbox" v-model="isPrimary" />
@@ -28,7 +28,18 @@
     		el:"#app",
     		data:{
     			isPrimary:false,
-    			isLg:false
+    			isLg:false//,
+    			//모델 안에서 사용하는 모델 -> data에 작성하면 모델이 바뀐다고 해서 자동으로 바뀌지 않는다. -> 종속된 모델
+    			//obj : {'btn-primary': this.isPrimary, 'btn-lg': this.isLg}
+    		},
+    		//종속된 모델이 바뀌면 다시 호출되어서 연산된(computed) 값을 리턴하는 함수이다.
+    		computed:{
+    			//계산된 모델을 작성하는 곳
+    			obj(){
+    				//로직을 넣을 기회가 있음 -> 그때마다 값을 다르게 넣어줄 수 있음
+    				//종속된 모델 값이 바뀌면 function이 다시 호출됨
+    				return {'btn-primary': this.isPrimary, 'btn-lg': this.isLg}
+    			}
     		}
     	})
     </script>
